modifique la cabecera y el color del texto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    color:darkblue;
+    color:rgb(212, 107, 21);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
