--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    color:darkblue;
+    color:rgb(95, 212, 17);
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
