--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-
+    background:rgb(65, 50, 50);
     color:rgb(212, 107, 21);
 
     text-align: left;
@@ -10,13 +10,20 @@ body {
 }
 
 #cabecera{
-    background: rgb(7, 43, 71);
+    background: royalblue;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 
+}
+
+#cabecera #logo{
+    width: 200px;
+    vertical-align: middle;
+    filter: brightness(1.1);
+    mix-blend-mode: multiply;
 }
 
 #cabecera #tagline{
@@ -37,5 +44,6 @@ body {
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
